--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 			</a>
 			<div id="menu">
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Shop</a></li>
-					<li><a href="#">Products</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
+					<li><a href="index.html">Home</a></li>
+					<li><a href="shop.html">Shop</a></li>
+					<li><a href="product.html">Products</a></li>
+					<li><a href="blog.html">Blog</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</div>
 			<div class="icon">
@@ -194,3 +194,4 @@
   
 </body>
 </html>
+
